Changed page UI

--- a/index.html
+++ b/index.html
@@ -46,68 +46,84 @@
     <div id="cover">
         <div id="quote">
             <h1>Welcome</h1>
-            <p>Simplicity is prerequisite for reliability. Edsger Dijkstra</p>
+            <p>Simplicity is prerequisite for reliability.... -Edsger Dijkstra</p>
             <ul class="about">
-                    <li><img src="img/profile.jpg" alt="Photograph of Kenny Shittu" class="profile-photo">
-                        <p>Hi, I'm Kenny Shittu, This is my design portfolio where i share all my favourite works. Have developed with various languages like JavaScript, Html, CSS, Jquery, Rails and more.. </p>
-                        <p>You can follow me on twitter <a href="https://twitter.com/kenny_she2_jojo">@kenny_she2_jojo</a>
-                        </p>
-                    </li>
-                </ul>
+                <li><img src="img/profile.jpg" alt="Photograph of Kenny Shittu" class="profile-photo">
+                    <p>Hi, I'm Kenny Shittu, This is my design portfolio where i share all my favourite works. Have developed with various languages like JavaScript, Html, CSS, Jquery, Rails and more.. </p>
+                    <p>You can follow me on twitter <a href="https://twitter.com/kenny_she2_jojo">@kenny_she2_jojo</a>
+                    </p>
+                </li>
+            </ul>
         </div>
-        <!-- <div id="firstContainer">
-        <div id="image">
-          <Button id="dare">Hello World..</button>
-              <div id="welcomeDiv">
-                Hi!, am Kenny Shittu, Welcome To
-                <a href="#holder2"><h1>My Portfolio</h1></a>
-              This is where i display all My Projects, click on the buttons above to explore the page...
-              </div>
-        </div>
-      </div>  -->
         <div id="holder2"></div>
         <div class="listItems">
-                <ul id="gallery">
-                    <li>
-                        <a href="http://shittu.github.io/GoogleClone/">
-                            <img src="img/googleclone.png" alt="" width="100%" height="150px">
-                            <p>A Clone of Google.com NG</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://shittu.github.io/new_jobseeker/">
-                            <img src="img/jobseeker.png" alt="" width="100%" height="150px">
-                            <p>A static HTML & CSS Landing Page</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://shittu.github.io/Hot_or_Cold/">
-                            <img src="img/hotorcold.png" alt="" width="100%" height="150px">
-                            <p>Hot Or Cold: A Simple Huckle Buckle Game</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://shittu.github.io/shop_quick/">
-                            <img src="img/shoplist.png" alt="" width="100%" height="150px">
-                            <p>Shop Quick: A Simple Shopping list Application</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://shittu.github.io/insta_search/">
-                            <img src="img/instaSearch.png" alt="" width="100%" height="150px">
-                            <p>Insta Search: An Application that allow users to search for media files and profile of users on Instagram</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://shittu.github.io/Angular_Insta_finder/">
-                            <img src="img/angularInsta.png" alt="" width="100%" height="150px">
-                            <p>Insta Search developed in Angular.js: Another version of Insta Search developed using Anjular.js</p>
-                        </a>
-                    </li>
-                </ul>
-          </div>
+            <ul id="gallery">
+                <li>
+                    <a href="http://shittu.github.io/GoogleClone/">
+                        <img src="img/googleclone.png" alt="" width="100%" height="150px">
+                        <p>A Clone of Google.com NG</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://shittu.github.io/new_jobseeker/">
+                        <img src="img/jobseeker.png" alt="" width="100%" height="150px">
+                        <p>A static HTML & CSS Landing Page</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://shittu.github.io/Hot_or_Cold/">
+                        <img src="img/hotorcold.png" alt="" width="100%" height="150px">
+                        <p>Hot Or Cold: A Simple Huckle Buckle Game</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://shittu.github.io/shop_quick/">
+                        <img src="img/shoplist.png" alt="" width="100%" height="150px">
+                        <p>Shop Quick: A Simple Shopping list Application</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://shittu.github.io/insta_search/">
+                        <img src="img/instaSearch.png" alt="" width="100%" height="150px">
+                        <p>Insta Search: An Application that allow users to search for media files and profile of users on Instagram</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://shittu.github.io/Angular_Insta_finder/">
+                        <img src="img/angularInsta.png" alt="" width="100%" height="150px">
+                        <p>Insta Search developed in Angular.js: Another version of Insta Search developed using Anjular.js</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div id="holder4"></div>
-        <div id="fourthContainer">
+        <div id="quote">
+
+            <h1>General Information</h1>
+            <p>I'm available for design and development of web applications, for enquiries check contact details,</p>
+            <p>For Urgent enquiries please contact through mobile number.</p>
+            <ul class="about">
+                <li>
+                    <h1>Contact Details</h1>
+                    <br>
+                        <p><a href="tel:+2348117727705">Tel : 234-8117727705</a>
+                        </p>
+                        <br>
+                        <p><a href="mailto:kehesjay@gmail.com">Email: kehesjay@gmail.com</a>
+                        </p>
+                        <br>
+                        <p><a href="https://twitter.com/kenny_she2_jojo">Twitter: @kenny_she2_jojo</a>
+                        </p>
+                        <br>
+                        <p><a href="https://www.facebook.com/shittu.kenny">Facebook: Kenny Shittu</a>
+                        </p>
+                        <br>
+                        <p><a>BBM: 2AB90B70</a>
+                        </p>
+                </li>
+            </ul>
+        </div>
+        <!--    <div id="fourthContainer">
             <div id="image4">
                 <ul class="about">
                     <li>
@@ -138,9 +154,9 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/myScript.js" type="text/javascript" charset="utf-8"></script>
+    </div> -->
+        <script src="js/jquery-1.11.1.min.js"></script>
+        <script src="js/myScript.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
