Fixed broken project links

--- a/index.html
+++ b/index.html
@@ -59,37 +59,37 @@
         <div class="listItems">
             <ul id="gallery">
                 <li>
-                    <a href="http://shittu.github.io/GoogleClone/">
+                    <a href="http://andela-Kshittu.github.io/GoogleClone/">
                         <img src="img/googleclone.png" alt="" width="100%" height="150px">
                         <p>A Clone of Google.com NG</p>
                     </a>
                 </li>
                 <li>
-                    <a href="http://shittu.github.io/new_jobseeker/">
+                    <a href="http://andela-Kshittu.github.io/new_jobseeker/">
                         <img src="img/jobseeker.png" alt="" width="100%" height="150px">
                         <p>A static HTML & CSS Landing Page</p>
                     </a>
                 </li>
                 <li>
-                    <a href="http://shittu.github.io/Hot_or_Cold/">
+                    <a href="http://andela-Kshittu.github.io/Hot_or_Cold/">
                         <img src="img/hotorcold.png" alt="" width="100%" height="150px">
                         <p>Hot Or Cold: A Simple Huckle Buckle Game</p>
                     </a>
                 </li>
                 <li>
-                    <a href="http://shittu.github.io/shop_quick/">
+                    <a href="http://andela-Kshittu.github.io/shop_quick/">
                         <img src="img/shoplist.png" alt="" width="100%" height="150px">
                         <p>Shop Quick: A Simple Shopping list Application</p>
                     </a>
                 </li>
                 <li>
-                    <a href="http://shittu.github.io/insta_search/">
+                    <a href="http://andela-Kshittu.github.io/insta_search/">
                         <img src="img/instaSearch.png" alt="" width="100%" height="150px">
                         <p>Insta Search: An Application that allow users to search for media files and profile of users on Instagram</p>
                     </a>
                 </li>
                 <li>
-                    <a href="http://shittu.github.io/Angular_Insta_finder/">
+                    <a href="http://andela-Kshittu.github.io/Angular_Insta_finder/">
                         <img src="img/angularInsta.png" alt="" width="100%" height="150px">
                         <p>Insta Search developed in Angular.js: Another version of Insta Search developed using Anjular.js</p>
                     </a>
